--- a/index-1ao18-21ao50.html
+++ b/index-1ao18-21ao50.html
@@ -2,10 +2,11 @@
 <html>
     <head>
     <title>Meu site</title>
+        <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
 
-<h1>Bem Vindos</h1>
+<h1 id="welcome">Bem Vindos</h1>
 <br>
 <h2>Um pouco sobre nossa <b>Pizzaria</b> 🍕</h2>
 <p> 
@@ -20,7 +21,7 @@ Mais do que pizza, oferecemos experiências. Sinta-se à vontade, escolha seu sa
 <h3> Sobre as Pizzas</h3>
 <p> Nossa massa ganha leveza com o fermento biológico, que libera <mark>CO<sub>2</sub></mark> na fermentação, e no forno a reação de maillard multiplica o sabor, elevando a experiência  ao nível 10<sup>2</sup>.</p>
 
- <p>Nossos clientes dizem: <q>a melhor pizza da cidade</q>.</p>
+ <p id="paragrafo">Nossos clientes dizem: <q>a melhor pizza da cidade</q>.</p>
   <pre>
 Pizza saindo do forno
 Cheiro bom no ar
