--- a/flexbox.html
+++ b/flexbox.html
@@ -13,5 +13,12 @@
         <div>Três</div>
     </div>
     <div>Quatro</div>
+    <div class="box-grid">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+        <div>5</div>
+    </div>
 </body>
 </html>
