--- a/informativo.html
+++ b/informativo.html
@@ -14,27 +14,27 @@
                 Uma comparação vidual e tecnica dos sistemas de layout
             </p>
         </header>
-        <div>
-            <section>
-                <h3><span></span>Escolher layout</h3>
-                <div>
-                    <button>Flexbox</button>
-                    <button>Grid</button>
+        <div class="controls-panel">
+            <section class="controls-card">
+                <h3><span class="dot" style="background: var(--primary);"></span>Escolher layout</h3>
+                <div class="button-group">
+                    <button id="btnflex" class="btn active-flex">Flexbox</button>
+                    <button id="btngrid" class="btn">Grid</button>
                 </div>
             </section>
-            <section>
-                <h3><span></span>Resumo do Comportamento</h3>
-                <div>
-                    <p>Unidimencional</p>
-                    <p>O layout é  calculado item a item. Otimo para distribuir espaco em uma linha</p>
+            <section class="controls-card">
+                <h3><span class="dot" style="background: #94a3b8;"></span>Resumo do Comportamento</h3>
+                <div id="statusinfo">
+                    <p id="txtAxix" style="margin: 5px 0;font-weight: 600;">Unidimencional</p>
+                    <p id="txtIdeal" style="margin: 0; font-size: 0.85rem; color: var(--tetx-muted);">O layout é  calculado item a item. Otimo para distribuir espaco em uma linha</p>
                     
                 </div>
             </section>
-            <section>
+            <section id="demoContainer" class="demo-container mode-flex">
                 <!--"Gerado dinamicamente"-->
             </section>
-            <footer>
-                <div>
+            <footer class="inf-footer">
+                <div class="info-box">
                     <h4>O PODER DO Flexbox</h4>
                     <ul>
                         <li>Foco no <strong>conteudo</strong>.</li>
@@ -43,7 +43,7 @@
                         <li>Flexibilidade: itens podem crescer a encolher dinamicamente.</li>
                     </ul>
                 </div>
-                 <div>
+                 <div class="info-box info-grid">
                     <h4>O Poder do Grid</h4>
                     <ul>
                         <li>Foco no <strong>layout</strong> (container).</li>
