atualizando exercicios HTML

--- a/index-1ao18-21ao50.html
+++ b/index-1ao18-21ao50.html
@@ -2,11 +2,12 @@
 <html>
     <head>
     <title>Meu site</title>
-        <link rel="stylesheet" href="estilo.css">
+        <link rel="stylesheet" href="index.css">
 </head>
 <body>
+<div class="container">
+<h1 class="welcome">Bem Vindos</h1>
 
-<h1 id="welcome">Bem Vindos</h1>
 <br>
 <h2>Um pouco sobre nossa <b>Pizzaria</b> 🍕</h2>
 <p> 
@@ -28,7 +29,7 @@ Cheiro bom no ar
 Na Sabor da Casa
 Você vai se apaixonar
     </pre>
-
+</div>
     <a href="https://www.google.com" target="_blank">Avaliações no Google</a>
 
  <p><a href="#rodape">Ir para o rodapé</a></p>
